# rendology

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deferred.rs  instance.rs  machine.rs  shader.rs  shadow.rs  text.rs
examples/: cube.rs  custom_scene_core.rs  lines.rs  particles.rs  shader.rs
src/: camera.rs  dither.rs  drawable.rs  error.rs  instancing.rs  lib.rs  line.rs  mesh.rs  object.rs  render_list.rs  resources.rs  screen_quad.rs  stage.rs
src/basic_obj/: mesh.rs  mod.rs  scene.rs
src/basic_object/: mesh.rs  mod.rs  scene.rs
src/fxaa/: mod.rs  shaders.rs
src/particle/: mod.rs  scene.rs
src/pipeline/: components.rs  conduit.rs  config.rs  deferred.rs  instance.rs  light.rs  mod.rs  pass.rs  render_list.rs  render_pass.rs  shaders.rs  shadow.rs  simple.rs  wind.rs
src/pipeline/deferred/: mod.rs  shader.rs  shaders.rs  vertex.rs
src/pipeline/fxaa/: mod.rs  shader.rs  shaders.rs
src/pipeline/glow/: mod.rs  shader.rs  shaders.rs
src/pipeline/scene/: model.rs  wind.rs
src/pipeline/shadow/: mod.rs  shader.rs  shaders.rs
src/scene/: mod.rs  model.rs  wind.rs
src/shader/: defs.rs  input.rs  mod.rs
