[package]
name = "rendology"
version = "0.4.1"
authors = ["leod <subtle.frustration@proton.me>"]
edition = "2018"
license = "MIT"
description = "Rendology is a Glium-based 3D rendering library"
homepage = "https://github.com/leod/rendology"
documentation = "https://docs.rs/rendology"
repository = "https://github.com/leod/rendology"
keywords = ["graphics", "rendering", "pipeline", "glium", "3d"]
readme = "README.md"

[dependencies]
nalgebra = "0.18"
glium = "0.25"
log = "0.4"
obj = { version = "0.9", features = ["genmesh"] }
genmesh = "0.6"
glsl = "3.0"
num-traits = "0.2"
num-derive = "0.3"
coarse-prof = "0.2"

[dev-dependencies]
floating-duration = "0.1"
simple_logger = "1.0"
image = "0.22"
